// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetExternalUserMobileNumber tests renders GetExternalUserMobileNumber error 1`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48 without-default-padding pt-4 xl:pt-16"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_12
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.enter_mobile_or_home_number
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="phone"
                data-testid="phone"
                name="phone"
                placeholder=""
                required=""
                type="tel"
                value="(551) 528-3307"
              />
              <label
                class="absolute truncate required body3 label-small "
              >
                external_access.phone_number
              </label>
            </div>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto"
              data-test-id="mobile-phone-submit-button"
              data-testid="mobile-phone-submit-button"
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center space-x-2"
              >
                <div>
                  common.continue
                </div>
              </div>
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="text-danger"
    >
      common.error
    </div>
    <div
      class="flex flex-row space-x-6 items-center pt-16"
    >
      <div
        class=""
      >
        <svg
          class="icon-x-large "
          height="48"
          viewBox="0 0 48 48"
          width="48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="48"
            width="48"
          />
          <path
            class="rgba-038-fill"
            d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
          />
        </svg>
      </div>
      <div>
        external_access.emergency_note
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GetExternalUserMobileNumber tests renders GetExternalUserMobileNumber not-verified 1`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48 without-default-padding pt-4 xl:pt-16"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_12
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.enter_mobile_or_home_number
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="phone"
                data-testid="phone"
                name="phone"
                placeholder=""
                required=""
                type="tel"
                value="(551) 528-3307"
              />
              <label
                class="absolute truncate required body3 label-small "
              >
                external_access.phone_number
              </label>
            </div>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto"
              data-test-id="mobile-phone-submit-button"
              data-testid="mobile-phone-submit-button"
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center space-x-2"
              >
                <div>
                  common.continue
                </div>
              </div>
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="flex flex-row space-x-6 items-center pt-16"
    >
      <div
        class=""
      >
        <svg
          class="icon-x-large "
          height="48"
          viewBox="0 0 48 48"
          width="48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="48"
            width="48"
          />
          <path
            class="rgba-038-fill"
            d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
          />
        </svg>
      </div>
      <div>
        external_access.emergency_note
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GetExternalUserMobileNumber tests renders GetExternalUserMobileNumber verified 1`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48 without-default-padding pt-4 xl:pt-16"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_12
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.enter_mobile_or_home_number
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="phone"
                data-testid="phone"
                name="phone"
                placeholder=""
                required=""
                type="tel"
                value="(551) 528-3307"
              />
              <label
                class="absolute truncate required body3 label-small "
              >
                external_access.phone_number
              </label>
            </div>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto"
              data-test-id="mobile-phone-submit-button"
              data-testid="mobile-phone-submit-button"
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center space-x-2"
              >
                <div>
                  common.continue
                </div>
              </div>
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class="flex flex-row space-x-6 items-center pt-16"
    >
      <div
        class=""
      >
        <svg
          class="icon-x-large "
          height="48"
          viewBox="0 0 48 48"
          width="48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="48"
            width="48"
          />
          <path
            class="rgba-038-fill"
            d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
          />
        </svg>
      </div>
      <div>
        external_access.emergency_note
      </div>
    </div>
  </div>
</DocumentFragment>
`;
